parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> do_while_statement
Rule 9     statement -> for_statement
Rule 10    statement -> input_statement
Rule 11    statement -> block
Rule 12    declaration -> INT ID EQUALS NUMBER SEMICOLON
Rule 13    declaration -> FLOAT ID EQUALS FLOAT_NUMBER SEMICOLON
Rule 14    declaration -> STRING ID EQUALS STRING_LITERAL SEMICOLON
Rule 15    declaration -> INT ID EQUALS FLOAT_NUMBER SEMICOLON
Rule 16    declaration -> INT ID EQUALS STRING_LITERAL SEMICOLON
Rule 17    declaration -> FLOAT ID EQUALS NUMBER SEMICOLON
Rule 18    declaration -> FLOAT ID EQUALS STRING_LITERAL SEMICOLON
Rule 19    declaration -> STRING ID EQUALS NUMBER SEMICOLON
Rule 20    declaration -> STRING ID EQUALS FLOAT_NUMBER SEMICOLON
Rule 21    assignment -> ID EQUALS expression SEMICOLON
Rule 22    assignment -> ID PLUSPLUS SEMICOLON
Rule 23    expression -> NUMBER
Rule 24    expression -> FLOAT_NUMBER
Rule 25    expression -> STRING_LITERAL
Rule 26    expression -> ID
Rule 27    expression -> expression MULTIPLY expression
Rule 28    expression -> expression PLUS expression
Rule 29    input_statement -> INPUT LPAREN expression RPAREN SEMICOLON
Rule 30    if_statement -> IF LPAREN condition RPAREN block
Rule 31    while_statement -> WHILE LPAREN condition RPAREN block
Rule 32    do_while_statement -> DO statement_list ENDDO WHILE LPAREN condition RPAREN ENDWHILE
Rule 33    for_statement -> FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN block
Rule 34    condition -> expression EQ expression
Rule 35    condition -> expression NE expression
Rule 36    condition -> expression GT expression
Rule 37    condition -> expression LT expression
Rule 38    condition -> expression GE expression
Rule 39    condition -> expression LE expression
Rule 40    condition -> condition AND condition
Rule 41    block -> LBRACE statement_list RBRACE

Terminals, with rules where they appear

AND                  : 40
COMMA                : 33
DO                   : 32
ENDDO                : 32
ENDWHILE             : 32
EQ                   : 34
EQUALS               : 12 13 14 15 16 17 18 19 20 21
FLOAT                : 13 17 18
FLOAT_NUMBER         : 13 15 20 24
FOR                  : 33
GE                   : 38
GT                   : 36
ID                   : 12 13 14 15 16 17 18 19 20 21 22 26 33
IF                   : 30
IN                   : 33
INPUT                : 29
INT                  : 12 15 16
LBRACE               : 41
LE                   : 39
LPAREN               : 29 30 31 32 33 33
LT                   : 37
MULTIPLY             : 27
NE                   : 35
NUMBER               : 12 17 19 23 33 33
PLUS                 : 28
PLUSPLUS             : 22
RANGE                : 33
RBRACE               : 41
RPAREN               : 29 30 31 32 33 33
SEMICOLON            : 12 13 14 15 16 17 18 19 20 21 22 29
STRING               : 14 19 20
STRING_LITERAL       : 14 16 18 25
WHILE                : 31 32
error                : 

Nonterminals, with rules where they appear

assignment           : 5
block                : 11 30 31 33
condition            : 30 31 32 40 40
declaration          : 4
do_while_statement   : 8
expression           : 21 27 27 28 28 29 34 34 35 35 36 36 37 37 38 38 39 39
for_statement        : 9
if_statement         : 6
input_statement      : 10
program              : 0
statement            : 2 3
statement_list       : 1 3 32 41
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . do_while_statement
    (9) statement -> . for_statement
    (10) statement -> . input_statement
    (11) statement -> . block
    (12) declaration -> . INT ID EQUALS NUMBER SEMICOLON
    (13) declaration -> . FLOAT ID EQUALS FLOAT_NUMBER SEMICOLON
    (14) declaration -> . STRING ID EQUALS STRING_LITERAL SEMICOLON
    (15) declaration -> . INT ID EQUALS FLOAT_NUMBER SEMICOLON
    (16) declaration -> . INT ID EQUALS STRING_LITERAL SEMICOLON
    (17) declaration -> . FLOAT ID EQUALS NUMBER SEMICOLON
    (18) declaration -> . FLOAT ID EQUALS STRING_LITERAL SEMICOLON
    (19) declaration -> . STRING ID EQUALS NUMBER SEMICOLON
    (20) declaration -> . STRING ID EQUALS FLOAT_NUMBER SEMICOLON
    (21) assignment -> . ID EQUALS expression SEMICOLON
    (22) assignment -> . ID PLUSPLUS SEMICOLON
    (30) if_statement -> . IF LPAREN condition RPAREN block
    (31) while_statement -> . WHILE LPAREN condition RPAREN block
    (32) do_while_statement -> . DO statement_list ENDDO WHILE LPAREN condition RPAREN ENDWHILE
    (33) for_statement -> . FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN block
    (29) input_statement -> . INPUT LPAREN expression RPAREN SEMICOLON
    (41) block -> . LBRACE statement_list RBRACE

    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    ID              shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    INPUT           shift and go to state 20
    LBRACE          shift and go to state 21

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    input_statement                shift and go to state 10
    block                          shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . do_while_statement
    (9) statement -> . for_statement
    (10) statement -> . input_statement
    (11) statement -> . block
    (12) declaration -> . INT ID EQUALS NUMBER SEMICOLON
    (13) declaration -> . FLOAT ID EQUALS FLOAT_NUMBER SEMICOLON
    (14) declaration -> . STRING ID EQUALS STRING_LITERAL SEMICOLON
    (15) declaration -> . INT ID EQUALS FLOAT_NUMBER SEMICOLON
    (16) declaration -> . INT ID EQUALS STRING_LITERAL SEMICOLON
    (17) declaration -> . FLOAT ID EQUALS NUMBER SEMICOLON
    (18) declaration -> . FLOAT ID EQUALS STRING_LITERAL SEMICOLON
    (19) declaration -> . STRING ID EQUALS NUMBER SEMICOLON
    (20) declaration -> . STRING ID EQUALS FLOAT_NUMBER SEMICOLON
    (21) assignment -> . ID EQUALS expression SEMICOLON
    (22) assignment -> . ID PLUSPLUS SEMICOLON
    (30) if_statement -> . IF LPAREN condition RPAREN block
    (31) while_statement -> . WHILE LPAREN condition RPAREN block
    (32) do_while_statement -> . DO statement_list ENDDO WHILE LPAREN condition RPAREN ENDWHILE
    (33) for_statement -> . FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN block
    (29) input_statement -> . INPUT LPAREN expression RPAREN SEMICOLON
    (41) block -> . LBRACE statement_list RBRACE

    $end            reduce using rule 1 (program -> statement_list .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    ID              shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    INPUT           shift and go to state 20
    LBRACE          shift and go to state 21

    statement                      shift and go to state 22
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    input_statement                shift and go to state 10
    block                          shift and go to state 11

state 3

    (2) statement_list -> statement .

    INT             reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    DO              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    INPUT           reduce using rule 2 (statement_list -> statement .)
    LBRACE          reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    ENDDO           reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> declaration .

    INT             reduce using rule 4 (statement -> declaration .)
    FLOAT           reduce using rule 4 (statement -> declaration .)
    STRING          reduce using rule 4 (statement -> declaration .)
    ID              reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    DO              reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    INPUT           reduce using rule 4 (statement -> declaration .)
    LBRACE          reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    ENDDO           reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    INT             reduce using rule 5 (statement -> assignment .)
    FLOAT           reduce using rule 5 (statement -> assignment .)
    STRING          reduce using rule 5 (statement -> assignment .)
    ID              reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    DO              reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    INPUT           reduce using rule 5 (statement -> assignment .)
    LBRACE          reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    ENDDO           reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_statement .

    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    DO              reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    INPUT           reduce using rule 6 (statement -> if_statement .)
    LBRACE          reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    ENDDO           reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    INT             reduce using rule 7 (statement -> while_statement .)
    FLOAT           reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    ID              reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    DO              reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    INPUT           reduce using rule 7 (statement -> while_statement .)
    LBRACE          reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    ENDDO           reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> do_while_statement .

    INT             reduce using rule 8 (statement -> do_while_statement .)
    FLOAT           reduce using rule 8 (statement -> do_while_statement .)
    STRING          reduce using rule 8 (statement -> do_while_statement .)
    ID              reduce using rule 8 (statement -> do_while_statement .)
    IF              reduce using rule 8 (statement -> do_while_statement .)
    WHILE           reduce using rule 8 (statement -> do_while_statement .)
    DO              reduce using rule 8 (statement -> do_while_statement .)
    FOR             reduce using rule 8 (statement -> do_while_statement .)
    INPUT           reduce using rule 8 (statement -> do_while_statement .)
    LBRACE          reduce using rule 8 (statement -> do_while_statement .)
    $end            reduce using rule 8 (statement -> do_while_statement .)
    ENDDO           reduce using rule 8 (statement -> do_while_statement .)
    RBRACE          reduce using rule 8 (statement -> do_while_statement .)


state 9

    (9) statement -> for_statement .

    INT             reduce using rule 9 (statement -> for_statement .)
    FLOAT           reduce using rule 9 (statement -> for_statement .)
    STRING          reduce using rule 9 (statement -> for_statement .)
    ID              reduce using rule 9 (statement -> for_statement .)
    IF              reduce using rule 9 (statement -> for_statement .)
    WHILE           reduce using rule 9 (statement -> for_statement .)
    DO              reduce using rule 9 (statement -> for_statement .)
    FOR             reduce using rule 9 (statement -> for_statement .)
    INPUT           reduce using rule 9 (statement -> for_statement .)
    LBRACE          reduce using rule 9 (statement -> for_statement .)
    $end            reduce using rule 9 (statement -> for_statement .)
    ENDDO           reduce using rule 9 (statement -> for_statement .)
    RBRACE          reduce using rule 9 (statement -> for_statement .)


state 10

    (10) statement -> input_statement .

    INT             reduce using rule 10 (statement -> input_statement .)
    FLOAT           reduce using rule 10 (statement -> input_statement .)
    STRING          reduce using rule 10 (statement -> input_statement .)
    ID              reduce using rule 10 (statement -> input_statement .)
    IF              reduce using rule 10 (statement -> input_statement .)
    WHILE           reduce using rule 10 (statement -> input_statement .)
    DO              reduce using rule 10 (statement -> input_statement .)
    FOR             reduce using rule 10 (statement -> input_statement .)
    INPUT           reduce using rule 10 (statement -> input_statement .)
    LBRACE          reduce using rule 10 (statement -> input_statement .)
    $end            reduce using rule 10 (statement -> input_statement .)
    ENDDO           reduce using rule 10 (statement -> input_statement .)
    RBRACE          reduce using rule 10 (statement -> input_statement .)


state 11

    (11) statement -> block .

    INT             reduce using rule 11 (statement -> block .)
    FLOAT           reduce using rule 11 (statement -> block .)
    STRING          reduce using rule 11 (statement -> block .)
    ID              reduce using rule 11 (statement -> block .)
    IF              reduce using rule 11 (statement -> block .)
    WHILE           reduce using rule 11 (statement -> block .)
    DO              reduce using rule 11 (statement -> block .)
    FOR             reduce using rule 11 (statement -> block .)
    INPUT           reduce using rule 11 (statement -> block .)
    LBRACE          reduce using rule 11 (statement -> block .)
    $end            reduce using rule 11 (statement -> block .)
    ENDDO           reduce using rule 11 (statement -> block .)
    RBRACE          reduce using rule 11 (statement -> block .)


state 12

    (12) declaration -> INT . ID EQUALS NUMBER SEMICOLON
    (15) declaration -> INT . ID EQUALS FLOAT_NUMBER SEMICOLON
    (16) declaration -> INT . ID EQUALS STRING_LITERAL SEMICOLON

    ID              shift and go to state 23


state 13

    (21) assignment -> ID . EQUALS expression SEMICOLON
    (22) assignment -> ID . PLUSPLUS SEMICOLON

    EQUALS          shift and go to state 24
    PLUSPLUS        shift and go to state 25


state 14

    (13) declaration -> FLOAT . ID EQUALS FLOAT_NUMBER SEMICOLON
    (17) declaration -> FLOAT . ID EQUALS NUMBER SEMICOLON
    (18) declaration -> FLOAT . ID EQUALS STRING_LITERAL SEMICOLON

    ID              shift and go to state 26


state 15

    (14) declaration -> STRING . ID EQUALS STRING_LITERAL SEMICOLON
    (19) declaration -> STRING . ID EQUALS NUMBER SEMICOLON
    (20) declaration -> STRING . ID EQUALS FLOAT_NUMBER SEMICOLON

    ID              shift and go to state 27


state 16

    (30) if_statement -> IF . LPAREN condition RPAREN block

    LPAREN          shift and go to state 28


state 17

    (31) while_statement -> WHILE . LPAREN condition RPAREN block

    LPAREN          shift and go to state 29


state 18

    (32) do_while_statement -> DO . statement_list ENDDO WHILE LPAREN condition RPAREN ENDWHILE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . do_while_statement
    (9) statement -> . for_statement
    (10) statement -> . input_statement
    (11) statement -> . block
    (12) declaration -> . INT ID EQUALS NUMBER SEMICOLON
    (13) declaration -> . FLOAT ID EQUALS FLOAT_NUMBER SEMICOLON
    (14) declaration -> . STRING ID EQUALS STRING_LITERAL SEMICOLON
    (15) declaration -> . INT ID EQUALS FLOAT_NUMBER SEMICOLON
    (16) declaration -> . INT ID EQUALS STRING_LITERAL SEMICOLON
    (17) declaration -> . FLOAT ID EQUALS NUMBER SEMICOLON
    (18) declaration -> . FLOAT ID EQUALS STRING_LITERAL SEMICOLON
    (19) declaration -> . STRING ID EQUALS NUMBER SEMICOLON
    (20) declaration -> . STRING ID EQUALS FLOAT_NUMBER SEMICOLON
    (21) assignment -> . ID EQUALS expression SEMICOLON
    (22) assignment -> . ID PLUSPLUS SEMICOLON
    (30) if_statement -> . IF LPAREN condition RPAREN block
    (31) while_statement -> . WHILE LPAREN condition RPAREN block
    (32) do_while_statement -> . DO statement_list ENDDO WHILE LPAREN condition RPAREN ENDWHILE
    (33) for_statement -> . FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN block
    (29) input_statement -> . INPUT LPAREN expression RPAREN SEMICOLON
    (41) block -> . LBRACE statement_list RBRACE

    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    ID              shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    INPUT           shift and go to state 20
    LBRACE          shift and go to state 21

    statement_list                 shift and go to state 30
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    input_statement                shift and go to state 10
    block                          shift and go to state 11

state 19

    (33) for_statement -> FOR . LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN block

    LPAREN          shift and go to state 31


state 20

    (29) input_statement -> INPUT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 32


state 21

    (41) block -> LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . do_while_statement
    (9) statement -> . for_statement
    (10) statement -> . input_statement
    (11) statement -> . block
    (12) declaration -> . INT ID EQUALS NUMBER SEMICOLON
    (13) declaration -> . FLOAT ID EQUALS FLOAT_NUMBER SEMICOLON
    (14) declaration -> . STRING ID EQUALS STRING_LITERAL SEMICOLON
    (15) declaration -> . INT ID EQUALS FLOAT_NUMBER SEMICOLON
    (16) declaration -> . INT ID EQUALS STRING_LITERAL SEMICOLON
    (17) declaration -> . FLOAT ID EQUALS NUMBER SEMICOLON
    (18) declaration -> . FLOAT ID EQUALS STRING_LITERAL SEMICOLON
    (19) declaration -> . STRING ID EQUALS NUMBER SEMICOLON
    (20) declaration -> . STRING ID EQUALS FLOAT_NUMBER SEMICOLON
    (21) assignment -> . ID EQUALS expression SEMICOLON
    (22) assignment -> . ID PLUSPLUS SEMICOLON
    (30) if_statement -> . IF LPAREN condition RPAREN block
    (31) while_statement -> . WHILE LPAREN condition RPAREN block
    (32) do_while_statement -> . DO statement_list ENDDO WHILE LPAREN condition RPAREN ENDWHILE
    (33) for_statement -> . FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN block
    (29) input_statement -> . INPUT LPAREN expression RPAREN SEMICOLON
    (41) block -> . LBRACE statement_list RBRACE

    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    ID              shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    INPUT           shift and go to state 20
    LBRACE          shift and go to state 21

    statement_list                 shift and go to state 33
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    input_statement                shift and go to state 10
    block                          shift and go to state 11

state 22

    (3) statement_list -> statement_list statement .

    INT             reduce using rule 3 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement_list statement .)
    STRING          reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 3 (statement_list -> statement_list statement .)
    DO              reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    INPUT           reduce using rule 3 (statement_list -> statement_list statement .)
    LBRACE          reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    ENDDO           reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)
